# TianShu

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
configs/: tianshu_config.yaml
datasets/tianshu_v1/: problem_definitions.csv
datasets/tianshu_v1/examples/: oddnumber-1.mb  oddnumber-1b.mb  oddnumber.mb  test1.mb  test1b.mb  test1c.mb  testif.mb
datasets/tianshu_v1/template/: Language-template.md  Problem-template-001.md  Problem-template-002.md  Problem-template-003.md  Problem-template-004.md  Problem-template-005.md  Problem-template-006.md  Problem-template-007.md  Problem-template-008.md  keyword-list.txt
scripts/: analyze_multishot_report.py  analyze_report.py  find_missing_tests.py  generate_test_docs.sh  run_benchmarks_parallel.py  run_llm_prompt.py
tests/: conftest.py  test_llm_integration.py  test_llm_registry.py  test_mamba_interpreter.py
tianshu_bench/benchmarks/: conftest.py  test_llm_ability.py
tianshu_core/: config.py
tianshu_core/mamba/: mamba.py  setup.py
tianshu_core/mamba/mamba/: __init__.py  ast.py  environment.py  lexer.py  parser.py  parsetab.py  symbol_table.py
tianshu_core/utils/: __init__.py  anthropic_client.py  base.py  base_http_client.py  chutes_client.py  gemini_client.py  http_client.py  mamba_embedded_example.py  nvidia_client.py  ollama_client.py  openai_client.py  openrouter_client.py  registry.py  samba_nova_client.py
