[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tianshu"
version = "1.0.0"
description = "Ti훮nsh큰Bench: LLM Evaluation Suite"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Jeepy Tea", email = "jee@pee.tee"},
]
dependencies = [
    # Core testing framework
    "pytest>=8.0.0,<9.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-reportlog>=0.4.0",
    
    # LLM APIs
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
    
    # Data processing and validation
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic_core>=2.0.0,<3.0.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "jsonlines>=3.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    
    # HTTP and networking
    "requests>=2.31.0,<3.0.0",
    "urllib3>=2.0.0,<3.0.0",
    "certifi>=2024.0.0",
    "charset-normalizer>=3.0.0,<4.0.0",
    "idna>=3.0,<4.0",
    "aiohttp>=3.9.0",
    
    # Development tools (needed for interactive debugging)
    "ipython>=9.0.0",
    "decorator>=5.0.0",
    "jedi>=0.19.0",
    "prompt_toolkit>=3.0.0,<4.0.0",
    "pygments>=2.15.0",
    "traitlets>=5.0.0",
    
    # Parsing and AST
    "asttokens>=2.0.0",
    "executing>=2.0.0",
    "pure_eval>=0.2.0",
    "parso>=0.8.0",
    "stack-data>=0.6.0",
    
    # Graph visualization (useful for model architecture diagrams)
    "pydot>=2.0.0",
    "pyparsing>=3.0.0,<4.0.0",
    
    # Other utilities
    "packaging>=23.0",
    "pluggy>=1.0.0",
    "iniconfig>=2.0.0",
    "typing_extensions>=4.5.0",
    "annotated-types>=0.5.0",
    "ply>=3.11,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
tianshu-bench = "tianshu_bench.scripts.run_tianshu:main"

[tool.setuptools]
packages = ["tianshu_bench", "tianshu_core"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tianshu_bench/benchmarks"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_gpu: marks tests that require GPU",
    "model_specific: marks tests for specific models",
    "tianshu: mark test as part of Ti훮nsh큰Bench",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
